[metadata]
name = Airflow Provider: apache-airflow-providers-clickhouse
summary = Provider for Apache Airflow. Implements apache-airflow-providers-clickhouse package
description_file = README.md
;author = Apache Airflow PMC
;author_email = loktionov.fdr@gmail.com
license = MIT License
license_files =
	LICENSE
;	NOTICE

[bdist_wheel]
python_tag = py3

[options.entry_points]
apache_airflow_provider =
	provider_info=airflow.providers.clickhouse.get_provider_info:get_provider_info

[files]
packages = airflow.providers.clickhouse

[egg_info]
tag_build =
tag_date = 0

